	* Bug #4384 - Unclear labels for prompt when adding data sources during a run
	* Bug# 6133 - Threading the output stage of the event builder
	caused flow control to deadlock.
	* Adds a precheckForTransitionErrors to callout bundles. This allows for 
	  for checking a transition doomed for failure because of some detectable
		condition prior to transitioning. 
	* Bug #6151 Slow controls server of CCUSBReadout and VMUSBReadout now
	  accept connections from IPv6 loopback address (i.e. ::1) in addition
		to the IPv4 loopback address (i.e. 127.0.0.1).
	* Bug #5777 - Documentation added for RingSourceMgr and also documentation
	  updated that pertains to the event builder.
	* EVB gui is replaced with a new megawidget for better code organization.
11.1-008
	* Bug #6206 Fixes bug introduced in 11.1-007 concerning megawidget
	introduction that caused failures during EVBC::initialize.
11.1-009
	* Changes the communication pattern with the VM-USB that was causing 
	failures on daqdev-jessie. The opening of the VMUSB is simplified and the
	read back after a stack execution always requests 26700 bytes.
	* Bug #6245 Conditions call of exit(EXIT_FAILURE) on an actual failure. The
	issue was introduced in version 11.1-006.
	* Fixes buggy BLT read back when in interactive mode. The transaction method
	of CVMUSBusb now is strict about reading iteratively until it receives all
	requested data. This increased strictness caused changes to the vmeWrite16,
	vmeWrite8, doVMERead, and writeRegister methods.
	* Fixes broken BLT32 writes. Also imposes a limit on the size of the BLT
	to be fewer than 255 transfers.
	* Fixes bugs threading issues in SBS Readout framework. Specifically, the
	Readout program was leaking threads associated with the trigger loop
	every run which led to an 8192 kB leak in memory each begin run. There was
	also a deadlock condition that could occur when the user attempted to end
	a run when the trigger loop was attempting to do a scaler read.
11.2-000